--- a/Round1012_2089_2090_Div1_2/c1.md
+++ b/Round1012_2089_2090_Div1_2/c1.md
@@ -1,12 +1,12 @@
 # Бодолт
 
 Зөв хаалга/түлхүүртэйгээ таарсан $i$ дэх түлхүүр/хаалгыг, $i$ дэх түлхүүр/хаалга гэе.  
-$h_{i,j}=$"$i$-р хүн $j$-р хаалгыг онгойлгосон байх магадлал"
- гэвэл $i$-дэх хүний хувьд хариу нь $\displaystyle\sum_{j=1}^{l} h_{i,j}$ байна.  
+$h_{i,j}=$" $i$-р хүн $j$-р хаалгыг онгойлгосон байх магадлал"
+ гэвэл $i$-дэх хүний хувьд хариу нь $\sum_{j=1}^{l} h_{i,j}$ байна.  
 Хамгийн эхэнд сонгогдсон хаалга ба түлхүүр хоёр таарах магадлал $\frac{1}{n}$. Дараагийнх дээр нь эхэнд сонгогдсон хаалга, түлхүүр хоёрын аль нэг нь сонгогдоно. Хаалга нь сонгогдсон гэж үзье. Үүнээс цаашаа энэ хаалганд таарах түлхүүрийг олтлоо дараагийн хүмүүс нь өмнө нь энэ хаалгатай хамт сонгогдоогүй түлхүүрүүдийг сонгоод яваад байна. Эхний хаалга $k$-дах $(k \le l)$ үйлдэл дээр зөв түлхүүртэйгээ таарч онгойх магадлал нь $\dfrac{l-1}{l} \cdot \dfrac{l-2}{l-1} \cdot \dfrac{l-3}{l-2} \cdot \ldots \cdot \dfrac{l-k+1}{l-k+2} \cdot \dfrac{1}{l-k+1}=\dfrac{1}{l}$ байна. $k$-аас хамаарахгүй байна гэсэн үг. Эхний хаалгыг онгойлгосны дараа үлдсэн хаалга, түлхүүрнүүдийн хооронд юу ч мэдэхгүй болохоор $l$ нь л нэгээр багасаад бусдаар бол адилхан зарчмаар бодогдоно.  
 
-$dp[i][j]=$"$i$-р хаалгыг $j$-р хүн онгойлгосон байх магадлал" гэсэн dp-ээр бодъё.  
-$dp[0][1\,...\,n-1]=0,\;dp[0][n]=1$  
+$dp[i][j]=$" $i$-р хаалгыг $j$-р хүн онгойлгосон байх магадлал" гэсэн dp-ээр бодъё.  
+$dp[0][1..n-1]=0,dp[0][n]=1$  
 $dp[i][j]=\displaystyle\sum_{k=1}^{l+1-i} dp[i-1][(j-k-1\bmod n)+1] \cdot \dfrac{1}{l+1-i}$  
 Үүнийг prefix sum-аар олоод $O(nl)$ хугацаанд бодогдоно.
 
